<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@mipmap/ic_nav_menu_home"
        android:background="@android:color/transparent"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_product"
        android:background="@android:color/transparent"
        android:icon="@mipmap/ic_nav_menu_remind"
        android:title="@string/nav_product" />
    <item
        android:id="@+id/nav_chatbot"
        android:icon="@mipmap/ic_nav_menu_chatbot"
        android:background="@android:color/transparent"
        android:title="Chatbot" />

    <item
        android:id="@+id/nav_cart"
        android:icon="@mipmap/ic_nav_menu_cart"
        android:background="@android:color/transparent"
        android:title="@string/nav_cart" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@mipmap/ic_nav_menu_account"
        android:background="@android:color/transparent"
        android:title="@string/nav_profile" />
</menu>
