<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/r6i0mx7mhwj"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#F6F6F6">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/rgbw1u7qpe44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/rxy1n3bhfgy_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:id="@+id/rxy1n3bhfgy"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:src="@mipmap/img_grapes"
                        android:scaleType="fitXY"
                        />

                    <LinearLayout
                        android:id="@+id/img_policy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="35dp"
                        android:paddingBottom="248dp">

                        <ImageButton
                            android:id="@+id/btn_policy_back"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="19dp"
                            android:background="@android:color/transparent"
                            android:scaleType="fitXY"
                            android:src="@mipmap/ic_back" />
                    </LinearLayout>
                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/re2wua7u15tj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:paddingTop="30dp"
                    android:paddingBottom="92dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_policy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="19dp"
                        android:layout_marginBottom="21dp"
                        android:text="@string/title_policy_term"
                        android:textColor="#000000"
                        android:textSize="22sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/text_policy_title1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_title1"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_policy_tex1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_tex1"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_policy_title2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_title2"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_policy_text2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_text2"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_policy_title3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_title3"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_policy_description3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_description3"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_policy_title4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_title4"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_policy_description4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_description4"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_policy_title5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_title5"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_policy_description5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_description5"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_policy_title6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_title6"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_policy_description6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_description6"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_policy_title7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_title7"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_policy_description7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_description7"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_policy_title8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_title8"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_policy_description8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="19dp"
                        android:layout_weight="1"
                        android:text="@string/text_policy_description8"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>