<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:drawable/editbox_background_normal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="12dp">

    <!-- Top row LinearLayout for close icon alignment -->
    <LinearLayout
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <!-- Close Icon (X) -->
        <ImageView
            android:id="@+id/img_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/ic_close" />
    </LinearLayout>

    <!-- Title (Order Placed) -->
    <TextView
        android:id="@+id/tv_order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog_order_placed"
        android:textColor="@color/green_primary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Status Message (Your order is placed successfully!) -->
    <TextView
        android:id="@+id/tv_status_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_dialog_order_placed_message"
        android:textColor="#000000"
        android:textSize="16sp" />

    <!-- Action Message (Navigating to Homepage...) -->
    <TextView
        android:id="@+id/tv_navigation_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/title_dialog_navigation_message"
        android:textColor="#777777"
        android:textSize="14sp" />
</LinearLayout>
