<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/plant_news"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F6F6F6">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="262dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/img_grapes" />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start|top"
            android:layout_margin="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Back"
            android:padding="8dp"
            android:src="@mipmap/ic_back" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtSupportCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/title_customer_support"
            android:textAlignment="textStart"
            android:textColor="@color/green_primary"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtHotline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="24dp"
            android:text="@string/title_hotline"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtHotlineNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_edit_text"
            android:padding="12dp"
            android:text="+84 928134983" />

        <TextView
            android:id="@+id/txtChatbot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="24dp"
            android:text="@string/title_try_chatbot"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnChatbot"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:text="@string/btn_click_here"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
